# photos-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  photo.rs
