[package]
authors = ["Eric Trombly <etrombly@yahoo.com>"]
name = "photos-rs"
version = "0.1.0"

[dependencies]
cogset = "0.2.0"
gdk = "0.8.0"
gdk-pixbuf = "0.4.0"
geo = "0.8.2"
gtk = "0.4.0"
gtk-sys = "0.6.0"
hyper = "0.11.25"
hyper-tls = "0.1.3"
relm = "0.14.4"
relm-attributes = "0.14.4"
relm-derive = "0.14.4"
rexiv2 = "0.6.0"
walkdir = "2.1.4"
rgeo = "^0.1"
location_history = "^0.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.2"

[dependencies.osmgpsmap]
path = "../osmgpsmap-rs"

[profile.release]
lto = true
