[package]
authors = ["Eric Trombly <etrombly@yahoo.com>"]
name = "photos-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
cogset = "0.2.0"
gdk = "0.9.0"
gdk-pixbuf = "0.5.0"
geo = "0.11.0"
gtk = "0.5.0"
gtk-sys = "0.7.0"
relm = "0.15.0"
relm-attributes = "0.15.0"
relm-derive = "0.15.0"
rexiv2 = "0.7.0"
walkdir = "2.2.7"
rgeo = "0.2.2"
location_history = "0.2.1"
osmgpsmap = "0.2.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]

[profile.release]
lto = true
